# bugjira

./: LICENSE  Pipfile  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test.yml
contrib/: bugjira.json  sample_fields.json
src/bugjira/: broker.py  bugjira.py  common.py  config.py  exceptions.py  field.py  field_data_generator.py  field_factory.py  field_generator.py  issue.py  json_generator.py  plugin_loader.py  util.py
tests/: conftest.py  test_stub.py
tests/data/config/: good_config.json  missing_config.json
tests/unit/: test_broker.py  test_bugjira.py  test_config.py  test_field_data_generator.py  test_field_factory.py  test_field_generator.py  test_issue.py  test_json_generator.py  test_plugin_loader.py  test_util.py
tooling/: build_changelog
