[metadata]
name =  bugjira
author = Steve Linabery
author_email = slinabery@gmail.com
description = API abstraction library for bugzilla and jira APIs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/release-depot/bugjira
project_urls =
    Bug Tracker = https://github.com/release-depot/bugjira/issues
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    pydantic
    python-bugzilla
    jira
    stevedore

[options.entry_points]
bugjira.field_data.plugins =
    default_bugzilla_field_data_plugin = bugjira.field_data_generator:BugzillaFieldDataGenerator
    default_jira_field_data_plugin = bugjira.field_data_generator:JiraFieldDataGenerator

[options.extras_require]
devbase =
    tox

test =
    flake8
    pytest
    pytest-cov
    mock

docs =
    sphinx==4.3.1
    sphinx-autobuild==2021.3.14
    sphinx-rtd-theme==0.5.2
    myst-parser==0.15.2

dist =
    build
    setuptools_scm
    twine

[options.packages.find]
where = src

[flake8]
exclude = docs
